# docs/swagger.json
@@ -96,32 +96,8 @@
                     "302": {
                         "description": "Передача кода по ссылке обратного вызова"
                     },
-                    "400": {
+                    "default": {
                         "description": "Ошибка запроса",
-                        "schema": {
-                            "$ref": "#/definitions/response.Error"
-                        }
-                    },
-                    "401": {
-                        "description": "Аунтефикация не пройдена",
-                        "schema": {
-                            "$ref": "#/definitions/response.Error"
-                        }
-                    },
-                    "403": {
-                        "description": "Нет доступа к клиенту",
-                        "schema": {
-                            "$ref": "#/definitions/response.Error"
-                        }
-                    },
-                    "422": {
-                        "description": "Ошибка ввода данных",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorValidate"
-                        }
-                    },
-                    "500": {
-                        "description": "Внутренняя ошибка сервера",
                         "schema": {
                             "$ref": "#/definitions/response.Error"
                         }
@@ -226,7 +202,7 @@
                     "description": "Пароль пользователя",
                     "type": "string",
                     "maxLength": 24,
-                    "minLength": 6
+                    "minLength": 5
                 },
                 "remember": {
                     "description": "Запомнить меня",
@@ -265,14 +241,6 @@
             }
         },
         "response.Error": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "response.ErrorValidate": {
             "type": "object",
             "properties": {
                 "message": {
