# internal/transport/http/response/error.go
@@ -1,10 +1,7 @@
 package response
 
 type Error struct {
-	Message string `json:"message"`
-}
-
-type ErrorValidate struct {
+	Code     int               `json:"-"`
 	Message  string            `json:"message"`
-	Validate map[string]string `json:"validate"`
+	Validate map[string]string `json:"validate,omitempty"`
 }
